src/objects/peer__Note_Bundle__c.object
<CustomObject>
    <fields>
        <fullName>peer__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Investment_Order__c</fullName>
        <label>Investment Order</label>
        <referenceTo>loan__Investor_Loan__c</referenceTo>
        <relationshipLabel>Note Bundles</relationshipLabel>
        <relationshipName>Note_Bundles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>peer__Note_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Note Type</label>
        <referenceTo>peer__Note_Type__c</referenceTo>
        <relationshipLabel>Note Bundles</relationshipLabel>
        <relationshipName>Note_Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Number_of_Shares__c</fullName>
        <label>Number of Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Value__c</fullName>
        <formula>peer__Note_Type__r.peer__Denomination__c *  peer__Number_of_Shares__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Note Bundle</label>
    <nameField>
        <displayFormat>NB-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Note Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>